objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard Opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Analysis</fullName>
        </values>
        <values>
            <fullName>Closing</fullName>
        </values>
        <values>
            <fullName>Engagement</fullName>
        </values>
        <values>
            <fullName>Identified</fullName>
        </values>
        <values>
            <fullName>Launch</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AmountNoDec__c</fullName>
        <formula>TEXT ( CurrencyIsoCode ) + &apos; &apos; +
IF( Amount &gt;= 1000000000,
TEXT( ROUND( Amount/1000000000,2 ) ) +&apos;B&apos;,
IF( Amount &gt;= 1000000,
TEXT( ROUND ( Amount/1000000,2 ) ) + &apos;M&apos;,
IF( Amount &gt;= 1000,
TEXT( ROUND( Amount/1000,1 ) ) + &apos;K&apos;, TEXT(Round(Amount,0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Annual Net Turnover</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BO_Type_Display__c</fullName>
        <description>Formula field to display the value of the BO Type picklist.  Created so that WebMerge can correctly display the BO Type value on the Product Report.</description>
        <formula>CASE(
TEXT(Type), 
&quot;Development__c&quot;, &quot;Development&quot;, 
&quot;Replacement__c&quot;, &quot;Replacement&quot;, 
TEXT(Type)
)</formula>
        <label>BO Type Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BgcPlasticsId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>SFDP-1131. Carried-over from the Account. Modifiable by user on the Opportunity.</description>
        <inlineHelpText>Opportunities for the Advanced Materials LOB can have a customer business group classification specified. This is optional. If available on the account the value is carried-over, but can be changed on the opportunity.</inlineHelpText>
        <label>BGC Advanced Materials</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>You are only allowed to select a customer business group classification for the LOB Advanced Materials</errorMessage>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Advanced Materials</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Customer)</value>
            </filterItems>
            <infoMessage>Select a valid Customer business group classification for Advanced Materials.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit from the Account</description>
        <formula>TEXT ( Account.ImcdBusinessUnit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cold_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will move the opportunity to a &apos;cold&apos; stage (long-term opportunity). When checking the box, the probability automatically changes to 0%</inlineHelpText>
        <label>Cold Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DummyBoType__c</fullName>
        <description>This field is of Temporary use. It can be deleted once all Opportunities have a valid BO. &quot;Undetermined&quot; is used for opportunities which were lacking a value. This fields is solely used in the Customer and Principal reporting flows, which references a picklist. These values will be used in subsequent queries.</description>
        <label>Dummy BO Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development__c</fullName>
                    <label>Development</label>
                </value>
                <value>
                    <fullName>Replacement__c</fullName>
                    <label>Replacement</label>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpectedRevenueNoDec__c</fullName>
        <formula>TEXT ( CurrencyIsoCode ) + &apos; &apos; +
IF( ExpectedRevenue &gt;= 1000000000,
TEXT( ROUND( ExpectedRevenue/1000000000,2 ) ) +&apos;B&apos;,
IF( ExpectedRevenue &gt;= 1000000,
TEXT( ROUND ( ExpectedRevenue/1000000,2 ) ) + &apos;M&apos;,
IF( ExpectedRevenue &gt;= 1000,
TEXT( ROUND( ExpectedRevenue/1000,1 ) ) + &apos;K&apos;, TEXT(Round(ExpectedRevenue,0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functionality__c</fullName>
        <label>Functionality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HelixId__c</fullName>
        <externalId>true</externalId>
        <label>HelixId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box when the opportunity can be identified as key</description>
        <inlineHelpText>Checking the box will overwrite the quote line items</inlineHelpText>
        <label>Key Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB1__c</fullName>
        <inlineHelpText>Leaving this field empty, will automatically copy the Primary LOB1/2/3 values from the Account</inlineHelpText>
        <label>LOB1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB2__c</fullName>
        <label>LOB2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB1__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>LOB2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB3__c</fullName>
        <label>LOB3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB2__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>LOB3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadABCRating__c</fullName>
        <label>Lead ABC Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ABCRating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadAnnualRevenue__c</fullName>
        <label>Lead Annual Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AnnualRevenue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadNoOfEmployees__c</fullName>
        <label>Lead No. Of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NoOfEmployees</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Revenue_Currency__c</fullName>
        <label>Lead Revenue Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyInformation__c</fullName>
        <description>This field is used for legacy information for migration
example: re-parenting Opportunities for Lomas</description>
        <label>Legacy Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalErpId__c</fullName>
        <externalId>true</externalId>
        <label>LocalErpId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Reasons</fullName>
                </value>
                <value>
                    <fullName>Technical Reasons</fullName>
                </value>
                <value>
                    <fullName>Sample library at customer</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                    <isActive>false</isActive>
                    <label>No Budget / Lost Funding</label>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                    <isActive>false</isActive>
                    <label>No Decision / Non-Responsive</label>
                </value>
                <value>
                    <fullName>Price</fullName>
                    <isActive>false</isActive>
                    <label>Price</label>
                </value>
                <value>
                    <fullName>Technical</fullName>
                    <isActive>false</isActive>
                    <label>Technical</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <description>Margin percentage</description>
        <label>Margin Expectation</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NrOfQuotes__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Counts nr of Quotes of the opportunity</inlineHelpText>
        <label>NrOfQuotes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityErrorReason__c</fullName>
        <formula>IF (
				AND (
				    TEXT(CurrencyIsoCode) &lt;&gt;  TEXT(SBQQ__PrimaryQuote__r.CurrencyIsoCode)
								, NOT (ISBLANK ( SBQQ__PrimaryQuote__r.Id ) )
				)
				, &apos;Opportunity and Primary Quote Currency mismatch&apos;, &apos;|&apos;
)
+ 
IF (
				AND (
			     Pricebook2Id &lt;&gt; SBQQ__PrimaryQuote__r.SBQQ__PriceBook__c
								, NOT (ISBLANK ( SBQQ__PrimaryQuote__r.Id ) )
				)
				, &apos;Opportunity and Primary Quote Pricebook mismatch&apos;, &apos;|&apos;
)
+
IF ( ISBLANK (SBQQ__PrimaryQuote__r.Id), &apos;Opportunity has no Primary quote&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Error Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityError__c</fullName>
        <description>Checks whether the Opportunity has potential issues. Sibbling field OpportunityErrorReason__c
- Currency &lt;&gt; the Primary Quote&apos;s Currency</description>
        <formula>OR (
				AND (
								TEXT(CurrencyIsoCode) &lt;&gt;  TEXT(SBQQ__PrimaryQuote__r.CurrencyIsoCode)
								, NOT ISBLANK (SBQQ__PrimaryQuote__r.Id)
				)
    , AND (
 								Pricebook2Id &lt;&gt;  SBQQ__PrimaryQuote__r.SBQQ__PriceBook__c
								, NOT ISBLANK (SBQQ__PrimaryQuote__r.Id)
				)
				, ISBLANK (SBQQ__PrimaryQuote__r.Id)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Project can be used to group Opportunities</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Remarks__c</fullName>
        <label>Technical Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TotalGrossMarginNoDec__c</fullName>
        <formula>TEXT ( CurrencyIsoCode ) + &apos; &apos; +
IF( TotalGrossMargin__c &gt;= 1000000000,
TEXT( ROUND( TotalGrossMargin__c/1000000000,2 ) ) +&apos;B&apos;,
IF( TotalGrossMargin__c &gt;= 1000000,
TEXT( ROUND ( TotalGrossMargin__c/1000000,2 ) ) + &apos;M&apos;,
IF( TotalGrossMargin__c &gt;= 1000,
TEXT( ROUND( TotalGrossMargin__c/1000,1 ) ) + &apos;K&apos;, TEXT(Round(TotalGrossMargin__c,0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gross Margin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalGrossMargin__c</fullName>
        <description>https://imcdgroup.atlassian.net/browse/SFDP-1942</description>
        <label>Total Gross Margin</label>
        <summarizedField>OpportunityLineItem.GrossMargin__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Stage__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalMarginPerc__c</fullName>
        <description>https://imcdgroup.atlassian.net/browse/SFDP-1942</description>
        <formula>TotalGrossMargin__c / Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <businessProcess>Standard Opportunity</businessProcess>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CannotChangeLob1</fullName>
        <active>true</active>
        <description>LOB1 cannot be changed, once it&apos;s set. Only allowed by custom permission. Changing the LOB1 has impact on custom sharing. Initially shared Opportunities and child Quotes based on LOB1 will not be automatically re-calculated.</description>
        <errorConditionFormula>IF (
   AND (
				 $Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c
     , NOT ( $Permission.LockedOpportunityLob1Bypass )
					, ISCHANGED ( LOB1__c )
					, NOT ( ISBLANK ( TEXT ( PRIORVALUE ( LOB1__c ) ) ) )
    )
				, true
    , false
)</errorConditionFormula>
        <errorMessage>After creating an Opportunity you&apos;re only allowed to change the LOB2 and LOB3.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotCreateOppsLinkedToInactiveAccounts</fullName>
        <active>true</active>
        <description>Preventing the CREATION of new Opps linked to inactive accounts.</description>
        <errorConditionFormula>AND (
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c =True,
ISNEW(),
TEXT(Account.Status__c) = &apos;Not Active&apos;
)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Please select an active account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ClosedWonOnlyOnSoldTo</fullName>
        <active>true</active>
        <description>Opportunities can only be set to &apos;Closed Won&apos; or &apos;Closing&apos; on Sold To Accounts</description>
        <errorConditionFormula>$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c =True &amp;&amp;
OR(ISPICKVAL(StageName , &apos;Won&apos;),ISPICKVAL(StageName , &apos;Closing&apos;)) &amp;&amp; 
Account.RecordType.DeveloperName &lt;&gt; &apos;Customer_Sold_To&apos;</errorConditionFormula>
        <errorMessage>Opportunities can only be set to &apos;Closed Won&apos; or &apos;Closing&apos; on Sold To Accounts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LostReason</fullName>
        <active>true</active>
        <description>Ensure a reason is captured before opportunity is set to lost.</description>
        <errorConditionFormula>AND ( 
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c =True,
ISPICKVAL( StageName, &quot;Lost&quot; ), 
ISBLANK( TEXT(  Loss_Reason__c  ) )
 )</errorConditionFormula>
        <errorDisplayField>Loss_Reason__c</errorDisplayField>
        <errorMessage>Please provide a reason why this opportunity is lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpportunitiesOnlyOnProspectAndSoldTo</fullName>
        <active>true</active>
        <description>Opportunities can be created only on Prospect and Sold-To</description>
        <errorConditionFormula>IF(
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c &amp;&amp; 
Account.RecordType.DeveloperName &lt;&gt; &apos;Customer_Sold_To&apos; &amp;&amp; 
Account.RecordType.DeveloperName &lt;&gt; &apos;Customer_Prospect&apos;, 
true,
false)</errorConditionFormula>
        <errorMessage>Opportunities can only be created on &apos;Sold To&apos; And &apos;Prospect&apos; Accounts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpportunityMustHaveLOB</fullName>
        <active>true</active>
        <description>Validates that an Opportunity should always have an LOB. Note that if the Opportunity&apos;s LOB field is left empty, it is automatically taken over from the Account.</description>
        <errorConditionFormula>ISBLANK(TEXT(LOB1__c)) &amp;&amp; ISBLANK(TEXT(Account.Primary_LOB1__c))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Specify this Opportunity&apos;s LOB, either on this record or on the parent Account</errorMessage>
    </validationRules>
</CustomObject>